[package]
name = "petri_nets"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies.quick-xml]
version = "0.36.1"
features = ["serialize", "overlapped-lists"]

[dependencies.serde]
version = "1.0.210"
features = ["derive"]

[dependencies.ahash]
version = "0.8.11"

[dependencies.derive_more]
version = "0.99.18"
